// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FraudFormPage should match the snapshot on desktop layout with fraud form, 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Signaler une usurpation
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <div>
      <div>
        FraudFormIntroductionComponent
      </div>
      <div>
        FraudFormComponent
      </div>
      <div>
        AuthenticationEventIdCallout
      </div>
    </div>
  </div>
</div>
`;

exports[`FraudFormPage should match the snapshot on desktop layout without fraud form, 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Signaler une usurpation
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <div>
      FraudSurveyIntroductionComponent
    </div>
  </div>
</div>
`;

exports[`FraudFormPage should match the snapshot on desktop layout, when form submission has failed 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Signaler une usurpation
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <div>
      <div>
        FraudFormIntroductionComponent
      </div>
      <div>
        FraudFormComponent
      </div>
      <div
        data-mockid="AlertComponent"
      >
        <div>
          AlertComponent
        </div>
        <div>
          <p
            class="fr-alert__title"
          >
            Le message n’a pas pu être envoyé
          </p>
        </div>
      </div>
      <div>
        AuthenticationEventIdCallout
      </div>
    </div>
  </div>
</div>
`;

exports[`FraudFormPage should match the snapshot on desktop layout, when form submission has succeeded 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Signaler une usurpation
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <div>
      <div>
        FraudFormIntroductionComponent
      </div>
      <div
        data-mockid="AlertComponent"
      >
        <div>
          AlertComponent
        </div>
        <div>
          <p
            class="fr-alert__title"
          >
            Votre demande a bien été prise en compte
          </p>
          <p>
            Vous allez recevoir un message de confirmation à l’adresse électronique indiquée dans le formulaire de contact.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FraudFormPage should match the snapshot on mobile layout with fraud form, 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Signaler une usurpation
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <div>
      <div>
        FraudFormIntroductionComponent
      </div>
      <div>
        FraudFormComponent
      </div>
      <div>
        AuthenticationEventIdCallout
      </div>
    </div>
  </div>
</div>
`;

exports[`FraudFormPage should match the snapshot on mobile layout without fraud form, 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Signaler une usurpation
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <div>
      FraudSurveyIntroductionComponent
    </div>
  </div>
</div>
`;

exports[`FraudFormPage should match the snapshot on mobile layout, when form submission has failed 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Signaler une usurpation
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <div>
      <div>
        FraudFormIntroductionComponent
      </div>
      <div>
        FraudFormComponent
      </div>
      <div
        data-mockid="AlertComponent"
      >
        <div>
          AlertComponent
        </div>
        <div>
          <p
            class="fr-alert__title"
          >
            Le message n’a pas pu être envoyé
          </p>
        </div>
      </div>
      <div>
        AuthenticationEventIdCallout
      </div>
    </div>
  </div>
</div>
`;

exports[`FraudFormPage should match the snapshot on mobile layout, when form submission has succeeded 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <span
      data-htmltag="title"
    >
      Mon tableau de bord - Signaler une usurpation
    </span>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <div>
      <div>
        FraudFormIntroductionComponent
      </div>
      <div
        data-mockid="AlertComponent"
      >
        <div>
          AlertComponent
        </div>
        <div>
          <p
            class="fr-alert__title"
          >
            Votre demande a bien été prise en compte
          </p>
          <p>
            Vous allez recevoir un message de confirmation à l’adresse électronique indiquée dans le formulaire de contact.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
